--- a/www/css/delovoy_styles.css
+++ b/www/css/delovoy_styles.css
@@ -147,16 +147,14 @@ button.g-loader {background: #ababc6 url(/images/ajax_loader.gif) no-repeat cent
 }
 
 .vd_officelistwrapper-office-name {
-/* 	font-family: Lato-Bold; */
+	display: inline-block;
     font-weight: 600;	
 	font-size: 30px;
-	line-height: 1.3;
 	color: #000000;
 }
 
 .vd_officelistwrapper-office-place {
-	margin: 15px 0px 30px 0px;
-/* 	font-family: Lato-Regular; */
+	margin: 17px 0px 30px 0px;
 	font-size: 16px;
 	line-height: 1.5;
 	color: #010101;
@@ -261,6 +259,8 @@ button.g-loader {background: #ababc6 url(/images/ajax_loader.gif) no-repeat cent
 	width: 100%;
 	margin: 0 auto;
 	background-color: #e3e3e3;
+	background-size: cover;
+	background-position: center;
 	overflow: auto;
 }
 
@@ -294,7 +294,7 @@ button.g-loader {background: #ababc6 url(/images/ajax_loader.gif) no-repeat cent
 	padding-left: 360px;
 	padding-right: 360px;
 	margin-top: 20px;
-	text-shadow: 0px 0px 30px rgba(0,0,0,0.3);
+	text-shadow: 0px 0px 30px rgba(0,0,0,1);
 }
 
 .vd_singleofficewrapper-menu {
@@ -450,6 +450,7 @@ button.g-loader {background: #ababc6 url(/images/ajax_loader.gif) no-repeat cent
     top: 50%;
     transform: translateY(-50%);
 	left: 0;
+	cursor: pointer;
 }
 
 .cycle-next {
@@ -461,7 +462,10 @@ button.g-loader {background: #ababc6 url(/images/ajax_loader.gif) no-repeat cent
     top: 50%;
     transform: translateY(-50%);
 	right: 0;
+	cursor: pointer;
 }
+
+.cycle-prev.disabled, .cycle-next.disabled {cursor: default;}
 
 .vd_singleofficewrapper-content-services {
 	width: 100%;
@@ -1058,6 +1062,7 @@ display: block;
 }
 
 .vd_serviceincenter_wrapper-about-list-sublist {
+	position: relative;
 	width: 570px;
 	float: left;
 }
@@ -1067,34 +1072,35 @@ display: block;
 }
 
 .included .vd_serviceincenter_wrapper-about-list-sublist-header {
-	background-image: url('../images/svg/check.svg');
-    background-size: 30px 30px;
+	background-image: url('../images/svg/check-green.svg');
+    background-size: 50px 50px;
     background-repeat: no-repeat;	
-	padding-left: 50px;
-    float: left;
-    margin-bottom: 50px;
-/* 	font-family: Lato-Black; */
-	font-size: 20px;
-	line-height: 1.5;
+	padding-left: 60px;
+    /*float: left;*/
+    margin-bottom: 25px;
+ 	font-weight: 700;
+ 	font-size: 16px;
+	line-height: 50px;
+	white-space: nowrap;
 	color: #000000;    	
 }
 
 .payed .vd_serviceincenter_wrapper-about-list-sublist-header {
-	background-image: url('../images/svg/ruble.svg');
-	background-size: 24px 24px;
+	background-image: url('../images/svg/ruble2.svg');
+	background-size: 50px 50px;
     background-repeat: no-repeat;	
-	padding-left: 40px;
-	float: left;
-    margin-bottom: 50px;
-/* 	font-family: Lato-Black; */
-	font-size: 20px;
-	line-height: 1.5;
+	padding-left: 60px;
+	/*float: left;*/
+    margin-bottom: 25px;
+ 	font-weight: 700;
+	font-size: 16px;
+	line-height: 50px;
+	white-space: nowrap;
 	color: #000000;    
 }
 
 .vd_serviceincenter_wrapper-about-list-block {
 	float: left;
-	margin-bottom: 25px;
     width: 100%;
 }
 
@@ -1111,27 +1117,23 @@ display: block;
 }
 
 .vd_serviceincenter_wrapper-about-list-block-title {
-	padding-left: 100px;
-/* 	font-family: Lato-Regular; */
-	font-size: 20px;
-	line-height: 1.5;
+	padding: 10px 0 5px 80px;
+	font-size: 16px;
 	color: #000000;
 }
 
-.vd_serviceincenter_wrapper-about-list-block-title span {
+/*.vd_serviceincenter_wrapper-about-list-block-title span {
 	border-bottom: 2px solid #000000;
-}
+}*/
 
 .vd_serviceincenter_wrapper-about-list-block-desc {
-	padding-left: 100px;
-/* 	font-family: Lato-Regular; */
-	font-size: 16px;
+	padding: 0 50px 0 100px;
 	line-height: 1.5;
 	color: #010101;
 }
 
 .vd_service-gallery {
-	margin: 50px auto 100px auto;
+	margin: 100px auto;
     width: 100%;
 	padding: 0px 120px;
 	padding: 0;
@@ -1643,10 +1645,21 @@ display: block;
 	border-bottom: 1px solid #ffffff;
 }
 
+
+.open .vd_serviceincenter_wrapper-meetingrates-list-item-header-people {
+	background-image: url('../images/number_of_people_open.png');
+}
+
 .vd_serviceincenter_wrapper-meetingrates-list-item-header-photo {
+	display: block;
 	float: left;
 	width: 175px;
 	height: 100px;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-header-photo img {
+	position: absolute;
+	z-index: 1;
 }
 
 .vd_serviceincenter_wrapper-meetingrates-list-item-header-name {
@@ -1935,6 +1948,9 @@ display: block;
 	position: relative;
 	padding-left: 30px;
 }
+.vd_serviceincenter_wrapper-meetingrates-list-item-form-left .additionalservice_label:after {
+	margin-bottom: 7px;
+}
 
 .vd_serviceincenter_wrapper-meetingrates-list-item-form-left .additionalservice_label span {
 	position: absolute;
@@ -2006,7 +2022,6 @@ display: block;
 
 .vd_serviceincenter_wrapper-meetingrates-list-item-form-left-item-widetall {
 	width: 394px;
-	float: left;
 	height: 48px;
 	line-height: 48px;
 }
@@ -2068,11 +2083,12 @@ display: block;
 
 .vd_serviceincenter_wrapper-meetingrates-list-item-form-bottom-right .info {
 	float: left;
+	width: 300px;
 }
 
 .vd_serviceincenter_wrapper-meetingrates-list-item-form-bottom-right .warning {
 	float: right;
-	width: 470px;
+	width: 370px;
 	position: relative;
 	padding-left: 45px;
 }
@@ -2643,25 +2659,26 @@ display: block;
 }
 
 .vd_serviceincenter_wrapper-freeoffices-list-element-header-office {
-	width: 340px;
+	display: block;
+	width: 380px;
 	height: 100px;
 	border-right: 2px solid #ffffff;
 	float: left;
-    text-align: center;
 }
 
 .vd_serviceincenter_wrapper-freeoffices-list-element-header-office img {
 	width: 175px;
 	height: 100px;
 	float: left;
+
 }
 
 .vd_serviceincenter_wrapper-freeoffices-list-element-header-office span {
-/* 	font-family: Lato-Regular; */
 	font-size: 20px;
 	line-height: 1.5;
 	color: #000000;
     padding-top: 36px;
+	padding-left: 30px;
     display: inline-block;
 }
 
@@ -2683,7 +2700,7 @@ display: block;
 }
 
 .vd_serviceincenter_wrapper-freeoffices-list-element-header-people {
-	width: 202px;
+	width: 220px;
 	height: 100px;
 	border-right: 2px solid #ffffff;
 	float: left;
@@ -2756,30 +2773,30 @@ display: block;
 }
 
 .vd_serviceincenter_wrapper-freeoffices-list-element.open .vd_serviceincenter_wrapper-freeoffices-list-element-menu {
-	height: 640px;
+	height: 495px;
 	border-bottom: 2px solid #b4b3cc;
 }
 
 .vd_serviceincenter_wrapper-freeoffices-list-element-menu-reserveform {
 	width: 100%;
-	height: 310px;
+	height: 230px;
 	background-color: #fbfbfc;
 	padding: 30px;
 }
 
 .vd_serviceincenter_wrapper-freeoffices-list-element-menu-title {
-/* 	font-family: Lato-Bold; */
 	font-size: 30px;
 	font-weight: 600;
 	line-height: 1.3;
 	color: #000000;
+	background: #f2f2f2;
 	padding: 40px 0px 0px 30px;
 	height: 88px;
 }
 
 .vd_serviceincenter_wrapper-freeoffices-list-element-menu-reserveform-left {
 	width: 350px;
-	height: 250px;
+	height: 200px;
 	margin-right: 30px;
 	float: left;
 }
@@ -2823,7 +2840,7 @@ display: block;
 
 .vd_serviceincenter_wrapper-freeoffices-list-element-menu-reserveform-right {
 	width: 760px;
-	height: 250px;
+	height: 200px;
 	float: left;
 }
 
@@ -2910,19 +2927,23 @@ display: block;
 	box-shadow: 0px 0px 0px 2px #cf2553;
 }
 
-.vd_serviceincenter_wrapper-freeoffices-list-element-menu-reserveform-right .warning {
+.serviceincente-book {
+	width: 50%;
+	float: left;
+	padding-top: 35px;
+}
+.serviceincente-book .warning {
 	width: 355px;
-	float: right;
-/* 	font-family: Lato-Italic; */
 	font-size: 16px;
 	font-style: italic;
 	line-height: 1.5;
 	color: #000000;
 	position: relative;
 	padding-left: 30px;
+	margin-top: 20px;
 }
 
-.vd_serviceincenter_wrapper-freeoffices-list-element-menu-reserveform-right .warning:before {
+.serviceincente-book .warning:before {
 	content: '!';
 	height: 24px;
 	width: 24px;
@@ -2937,12 +2958,12 @@ display: block;
 	font-size: 20px;
 }
 
-.vd_serviceincenter_wrapper-freeoffices-list-element-menu-reserveform-right .warning span {
+.serviceincente-book .warning span {
 /* 	font-family: Lato-Bold; */
 	font-weight: 700;
 }
 
-.vd_serviceincenter_wrapper-freeoffices-list-element-menu-reserveform-right button {
+.serviceincente-book button {
 	width: 380px;
 	height: 60px;
 	text-align: center;
@@ -2956,7 +2977,7 @@ display: block;
 	cursor: pointer;
 }
 
-.vd_serviceincenter_wrapper-freeoffices-list-element-menu-reserveform-right button.disabled {
+.serviceincente-book button.disabled {
 	background-color: #f195b1;
 	color: #fdfdfd;
 	cursor: default;
@@ -2964,7 +2985,6 @@ display: block;
 
 .vd_serviceincenter_wrapper-freeoffices-list-element-menu-previewform {
 	width: 100%;
-	height: 240px;
 	background-color: #f2f2f6;
 	padding: 30px;
 }
@@ -2973,6 +2993,7 @@ display: block;
 	width: 350px;
 	float: left;
 	margin-right: 30px;
+	padding-top: 70px;
 }
 
 .vd_serviceincenter_wrapper-freeoffices-list-element-menu-previewform-left p {
@@ -3032,7 +3053,6 @@ display: block;
 }
 
 .vd_serviceincenter_wrapper-freeoffices-list-element-menu-previewform-right-datetime {
-	margin-top: 25px;
 	height: 40px;
 	line-height: 40px;
 }
@@ -3287,10 +3307,10 @@ display: block;
 }
 
 .vd_serviceincenter_wrapper-freeoffices-list-element-menu-previewform-right-submit {
-	width: 380px;
+	width: 355px;
+	margin-left: 25px;
 	height: 60px;
 	background-color: #0085ff;
-/* 	font-family: Lato-Regular; */
 	font-size: 14px;
 	color: #ffffff;
 	position: relative;
@@ -3298,6 +3318,7 @@ display: block;
 	line-height: 60px;
 	text-align: center;
 	cursor: pointer;
+	border: none;
 }
 
 .vd_serviceincenter_wrapper-freeoffices-list-element-menu-previewform-right-submit.disabled {
@@ -3703,11 +3724,9 @@ display: block;
 }
 
 .vd_subservice_list-item-sublist-item {
-	height: 31px;
 	width: 100%;
 	padding: 0px 55px 0px 30px;
 	background-color: #ffffff;
-/* 	font-family: Lato-Regular; */
 	font-size: 16px;
 }
 
@@ -3855,37 +3874,39 @@ display: block;
 
 .vd_service_single_wrapper-about-list-sublist.payed {
 	margin-left: 30px;
+
 }
 
 .included .vd_service_single_wrapper-about-list-sublist-header {
-    background-image: url('../images/svg/check.svg');
-    background-size: 30px 30px;
+    background-image: url('../images/svg/check-green.svg');
+    background-size: 50px 50px;
     background-repeat: no-repeat;
-    padding-left: 50px;
-    float: left;
-    margin-bottom: 50px;
-/*     font-family: Lato-Black; */
-    font-size: 20px;
-    line-height: 1.5;
+    padding-left: 60px;
+    /*float: left;*/
+    margin-bottom: 25px;
+	font-weight: 700;
+    font-size: 16px;
+    line-height: 50px;
+    white-space: nowrap;
     color: #000000;	
 }
 
 .payed .vd_service_single_wrapper-about-list-sublist-header {
-    background-image: url('../images/svg/ruble.svg');
-    background-size: 24px 24px;
+    background-image: url('../images/svg/ruble2.svg');
+    background-size: 50px 50px;
     background-repeat: no-repeat;
-    padding-left: 40px;
-    float: left;
-    margin-bottom: 50px;
-/*     font-family: Lato-Black; */
-    font-size: 20px;
-    line-height: 1.5;
+    padding-left: 60px;
+    /*float: left;*/
+    margin-bottom: 25px;
+	font-weight: 700;
+    font-size: 16px;
+    line-height: 50px;
+    white-space: nowrap;
     color: #000000;
 }
 
 .vd_service_single_wrapper-about-list-block {
 	float: left;
-    margin-bottom: 25px;
 	width: 100%;
 }
 
@@ -3902,16 +3923,13 @@ display: block;
 }
 
 .vd_service_single_wrapper-about-list-block-title {
-	padding-left: 100px;
-/*     font-family: Lato-Regular; */
-    font-size: 20px;
-    line-height: 1.5;
+	padding: 10px 0 5px 80px;
+    font-size: 16px;
     color: #000000;
 }
 
 .vd_service_single_wrapper-about-list-block-desc {
     padding-left: 100px;
-/*     font-family: Lato-Regular; */
     font-size: 16px;
     line-height: 1.5;
     color: #010101;	
@@ -4361,7 +4379,7 @@ display: block;
 .vd_about_wrapper-header {
 	height: 200px;
 	width: 100%;
-	background-image: url(/uploads/images/office_centers/arma/arma.png);
+	background-image: url(/uploads/images/office_centers/gostinyi/gd_1600_2.jpg);
 	background-size: cover;
 	padding-top: 60px;
 }
@@ -4606,11 +4624,11 @@ display: block;
 }
 
 .vd_about_wrapper-contacts-inner-data {
+	position: relative;
 	width: 380px;
     margin-top: 40px;
     float: left;
     color: #ffffff;
-/*     font-family: Lato-Medium; */
 	font-size: 20px;
 	line-height: 1.5;
 }
@@ -4637,7 +4655,7 @@ display: block;
 }
 
 .vd_about_wrapper-contacts-inner-data-block .phone {
-	display: block;
+	display: inline-block;
 	position: relative;
 	padding-left: 28px;
 	background-image: url(../images/delovoy_fake_contactsform_phone.png);
@@ -4659,6 +4677,7 @@ display: block;
 }
 
 .vd_about_wrapper-contacts-inner-data-form {
+	position: relative;
 	margin-top: 10px;
 }
 
@@ -4675,7 +4694,7 @@ display: block;
 .vd_about_wrapper-contacts-inner-data-form input {
 	width: 100%;
 	height: 40px;
-	margin: 10px 0px;
+	margin-bottom: 15px;
 	border: 2px solid #d5d5e2;
 	padding-left: 45px;
 }
@@ -4683,7 +4702,6 @@ display: block;
 .vd_about_wrapper-contacts-inner-data-form button {
 	width: 100%;
 	height: 40px;
-	margin: 10px 0px;
 	border: 2px solid #d5d5e2;
 	padding-left: 45px;
 }
@@ -4707,10 +4725,10 @@ display: block;
 .vd_about_wrapper-contacts-inner-data-form textarea {
 	width: 100%;
 	height: 60px;
-	margin: 10px 0px 20px 0px;
 	border: 2px solid #d5d5e2;
 	padding-left: 40px;
     padding-top: 8px;
+    margin-bottom: 15px;
 }
 
 .vd_about_wrapper-contacts-inner-data-form .name {
@@ -4730,6 +4748,12 @@ display: block;
     background-size: 24px 24px;
     background-repeat: no-repeat;
     background-position: 11px 6px;	
+}
+
+.vd_about_wrapper-contacts-inner-data-form .phone {
+	background-image: url('../images/input_phone.png');
+    background-repeat: no-repeat;
+    background-position: 17px 8px;
 }
 
 .vd_about_wrapper-contacts-inner-data-form input:focus, .vd_about_wrapper-contacts-inner-data-form textarea:focus {
@@ -4870,6 +4894,7 @@ display: block;
 }
 
 .vd_specialoffer-offers-list-element-header-office {
+	display: block;
 	width: 555px;
 	height: 100px;
 	border-right: 2px solid #ffffff;
@@ -4878,6 +4903,7 @@ display: block;
 }
 
 .vd_specialoffer-offers-list-element-header-office-img {
+	display: block;
 	width: 175px;
 	height: 100px;
 	float: left;
@@ -5400,7 +5426,7 @@ display: block;
 	font-size: 19px;
 	font-weight: 700;
 	color: #000;
-	margin-left: 24px;
+	margin-left: 3px;
 	padding-bottom: 10px;
 	display: inline-block;
 }
@@ -5427,7 +5453,8 @@ button.consultation {
 }
 
 .vd_fake_ajax_alert {
-    width: 910px;
+	width: 100%;
+    max-width: 910px;
     position: fixed;
     background-color: #f7f8f9;
     top: 50%;
